<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"

	android:orientation="vertical"
	tools:context=".MainActivity"
	android:gravity="center_vertical"
	android:padding="10dp"
	android:backgroundTint="@color/purple_200"
	>


		<com.google.android.material.textview.MaterialTextView
			
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/keystore_sign_and_verify"
			android:layout_marginTop="10dp"
			android:layout_gravity="center"
			android:gravity="center"
			android:textAlignment="gravity"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
			android:padding="5dp"
			android:textColor="@color/black"
			
			/>
		<com.google.android.material.textview.MaterialTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/msg_private"
			android:layout_marginTop="10dp"
			android:layout_gravity="start"
			android:gravity="start"
			android:textAlignment="textStart"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
			android:padding="5dp"
			android:textColor="@color/black"
			
			/>
		<com.google.android.material.textview.MaterialTextView
			
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/msg_public"
			android:layout_marginTop="10dp"
			android:layout_gravity="center"
			android:gravity="start"
			android:textAlignment="viewStart"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
			android:padding="5dp"
			android:textColor="@color/black"
			
			/>
	
	<com.google.android.material.button.MaterialButton
		android:id="@+id/signButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sign"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
		android:layout_marginTop="10dp"
		android:layout_gravity="center"
		
		/>
	
	<com.google.android.material.button.MaterialButton
		android:id="@+id/verifyButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:text="@string/verify"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
		android:layout_gravity="center"
		/>
	
	<!-- tools:text="@string/signed_successful" -->
	<com.google.android.material.textview.MaterialTextView
		android:id="@+id/resultTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:text="@string/signed_successful"
		
		android:layout_marginTop="10dp"
		android:layout_gravity="center"
		android:gravity="center"
		android:textAlignment="gravity"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
		android:textColor="@color/black"
		
		/>
		

	

	

	
	
</LinearLayout>